# anti-sampling

./: .gitignore  LICENSE  acc_config.yaml  acc_config_0.yaml  distill.py  environment.yml  gen_config.yaml  gentraces.py  grid.py  grid_0.py  params_full4.txt  pipeline_gsm8k_0.sh  pipeline_gsm8k_1.sh  pipeline_gsm8k_proxy_1.5B.sh  pipeline_math.sh  pipeline_math_0.sh  pipeline_mmlu.sh  pipeline_mmlu_0.sh  pipeline_mmlu_1.sh  prepare_data.sh  pyproject.toml  readme.md  run.sh  save_grad.py  sft.py  sft.sh  test.ipynb  train_config.yaml  utils.py
